<resources>
    <string name="app_name">TestMvvm3</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="edit_image">Edit Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="enter_the_task_title">Enter the task title</string>
    <string name="enter_the_task_description">Enter the task description</string>
    <string name="save">Save</string>
    <string name="update_task">Update Task</string>
</resources>