<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginVertical="2dp"/>

            <TextView
                android:id="@+id/descrText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="2dp"/>

            <TextView
                android:id="@+id/dataText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="8dp"
                android:src="@drawable/light_theme_edit_24"
                android:contentDescription="@string/edit_image" />

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="4dp"
                android:src="@drawable/light_theme_delete_24"
                android:contentDescription="@string/delete_image" />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>