<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTaskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Task"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="16dp"/>

        <ImageView
            android:id="@+id/closeImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/light_theme_close_24"
            android:contentDescription="@string/delete_image"
            android:layout_alignParentEnd="true"/>

        <View
            android:id="@+id/viewHLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/titleTaskText"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewHLine"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edTaskTitleL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edTaskDescriptionL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:gravity="top|start" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:text="@string/save"
                android:textSize="20sp"/>

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>